# octo-band

./: .gitignore  PLAN.md  README.md  config.yaml  pyproject.toml
octoband/: config.py  device.py  hub.py  main.py
octoband/filters/: __init__.py  cc.py  channel.py  generators.py  notes.py  triggers.py
tests/: test_config.py  test_filters.py
